--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,8 +1,8 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{ site.username }}</span>
-        <span class="site-description">{{ site.user_title }}</span>
+        <span class="site-title">{{ site.title }}</span>
+        <span class="site-description">{{ site.description }}</span>
       </h1>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
