--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,7 +4,13 @@
         <span class="site-title">{{ site.title }}</span>
         <span class="site-description">{{ site.description }}</span>
       </h1>
+
+      <div class="content-logo">
+           <img src="/assets/logo.png" alt="logo">
+      </div>
+
       <div class="header-icons">
+
         <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
       </div>
@@ -12,5 +18,5 @@
         <!-- <a class="link" href="#about" data-scroll>About Me</a> -->
       </div>
   </div>
-  <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+  <!-- <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a> -->
 </div>
