--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,9 +4,9 @@
   {% include head.html %}
   <body>
       {% include header.html %}
-      <section id="about">
+      <!--<section id="about">
         {% include about.html %}
-      </section>
+      </section> -->
         {{ content }}
       {% include footer.html %}
   </body>
