--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 <html lang="en">
   {% include head.html %}
   <body>
@@ -8,6 +8,6 @@
         {% include about.html %}
       </section> -->
         {{ content }}
-      {% include footer.html %}
+      <!--{% include footer.html %}-->
   </body>
 </html>
