--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,6 +8,6 @@
         {% include about.html %}
       </section> -->
         {{ content }}
-      <!--{% include footer.html %}-->
+      {% include footer.html %}
   </body>
 </html>
