--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <div class="content-logo">
-           <img src="/assets/logo.png" alt="logo">
+           <img src="{{'/assets/logo.png'}}" alt="logo">
       </div>
       <h1>
         <span class="site-title">{{ site.title }}</span>
