--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <div class="content-logo">
-           <img src="https://live.staticflickr.com/65535/48295588652_f4871eeb98_o_d.png" alt="logo">
+           <img src="https://live.staticflickr.com/65535/48295588652_f4871eeb98_o_d.png" alt="logo" height="240" width="240">
       </div>
       <h1>
         <span class="site-title">{{ site.title }}</span>
