--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -7,6 +7,11 @@
         <span class="site-title">{{ site.title }}</span>
         <span class="site-description">{{ site.description }}</span>
       </h1>
+      <div class="download">
+        <form method="get" action="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip">
+   <button type="submit">Download</button>
+</form>
+    </div>
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
