--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -7,8 +7,8 @@
         <span class="site-title">{{ site.title }}</span>
         <span class="site-description">{{ site.description }}</span>
       </h1>
-      <div class="header-icons">
-        <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center">
+	  <div class = "download">
+		<a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center">
 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="48px" height="48px" viewBox="0 0 598.312 598.312" style="enable-background:new 0 0 598.312 598.312;"
 	 xml:space="preserve">
@@ -65,7 +65,11 @@
 	</g>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
 </svg>
-</a>
+</a>  
+	  </div>
+	  
+      <div class="header-icons">
+        
         <a aria-label="Send email" href="mailto:lamquangminh10@gmail.com"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Facebook" target="_blank" href="https://www.facebook.com/bogotiengvietevkey"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
       </div>
