--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,7 +10,9 @@
 	  <div class = "download">
 		<a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 299.998 299.998" style="enable-background:new 0 0 299.998 299.998;" xml:space="preserve">
+	 viewBox="0 0 299.998 299.998" style="enable-background:new 0 0 299.998 299.998;" xml:space="preserve"
+     width="48px" height="48px"
+     >
 <g>
 	<g>
 		<path d="M149.995,0C67.156,0,0,67.159,0,149.997c0,82.837,67.156,150,149.995,150s150.003-67.163,150.003-150
