--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -12,9 +12,9 @@
       
     <div class="download" style="margin-top: 54px;margin-bottom: 47px;">
       <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-right: 15px;">
-      <i class="fa fa-windows"></i>&nbsp;&nbsp;<span>For Windows</span></a>
+      <i class="fa fa-windows"></i>&nbsp;&nbsp;<span>v3.4.9</span></a>
       <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKeyMac.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-left: 15px;">
-      <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>For macOS</span></a>
+      <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v3.0.20</span></a>
     </div>
       
     <div class="header-icons tanimation">
