--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -10,12 +10,12 @@
       <span class="site-description">{{ site.description }}</span>
     </h1>
       
-    <div class="download" style="margin-top: 54px;margin-bottom: 47px;">
-      <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-right: 15px;">
+   <div class="download">
+    <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKey.zip" title="Tải về cho Windows" rel="nofollow">
       <i class="fa fa-windows"></i>&nbsp;&nbsp;<span>v3.4.9</span></a>
-      <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKeyMac.zip" rel="nofollow" class="d-flex flex-items-center" style="color: #4dd0e1;border: 2px solid #4dd0e1;text-decoration: none;padding: 9px 18px;font-size: 23px;border-radius: 10px;margin-left: 15px;">
-      <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v3.0.21</span></a>
-    </div>
+    <a href="https://github.com/lamquangminh/EVKey/releases/download/Release/EVKeyMac.zip" title="Tải về cho macOS" rel="nofollow">
+      <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v3.0.22</span></a>
+  </div>
       
     <div class="header-icons tanimation">
 
