--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,10 +2,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta property="og:image" content="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" /> 
+  
   <title>EVKey - Vietnamese Keyboard - EVKey Homepage</title>
-  <meta name="description" content= "EVKey - Vietnamese Keyboard - Bộ gõ tiếng Việt trên Windows - EVKey Hompage">
+  <meta name="description" content= "EVKey - Vietnamese Keyboard - Bộ gõ tiếng Việt trên PC - EVKey Hompage - Trang chủ chính thức EVKey">
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" >
+  
 </head>
