--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/devicon.min.css">
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
   {% include head.html %}
   <body bgcolor="black">
       {% include header.html %}
