--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,6 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" /> 
+  <meta property="og:type" content="website" />
   
   <title>EVKey - Vietnamese Keyboard - EVKey Homepage</title>
   <meta name="description" content= "EVKey - Vietnamese Keyboard - Bộ gõ tiếng Việt trên PC - EVKey Hompage - Trang chủ chính thức EVKey">
