--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -5,7 +5,7 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" /> 
   <meta property="og:type" content="website" />
   
-  <title>EVKey - Vietnamese Keyboard - EVKey Homepage</title>
+  <title>EVKey - Vietnamese Keyboard - EVKey Homepage - Trang chủ chính thức EVKey</title>
   <meta name="description" content= "EVKey - Vietnamese Keyboard - Bộ gõ tiếng Việt trên PC - EVKey Hompage - Trang chủ chính thức EVKey">
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
