--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" /> 
   <meta property="og:type" content="website" />
+  <meta name="cf-2fa-verify" content="e800bb24882564a">
   
   <title>EVKey - Vietnamese Keyboard - EVKey Homepage - Trang chủ chính thức EVKey</title>
   <meta name="description" content= "EVKey - Vietnamese Keyboard - Bộ gõ tiếng Việt trên PC - EVKey Hompage - Trang chủ chính thức EVKey">
