--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -5,7 +5,7 @@
     <li><a class="donate_link" href="https://unghotoi.com/1565708776nxjgz" target="_black" rel="noopener">UngHoToi</a></li>
     <li><a id="donate_momo" class="donate_link" href="#">MoMo</a></li>
     <li><a id="donate_vtpay" class="donate_link" href="#">ViettelPay</a></li>
-    <li><a id="donate_zalopay" class="donate_link" href="#">ZaloPay</a></li>
+    <!--<li><a id="donate_zalopay" class="donate_link" href="#">ZaloPay</a></li> -->
   </ul>
 </div>
 
@@ -120,6 +120,7 @@
     modal2.classList.remove("active");
   }
   
+
   window.onclick = function(event) {
     if (event.target == modal) {
       modal.classList.remove("active");
