--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -11,5 +11,6 @@
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
   <link rel="shortcut icon" type="image/png" href="https://raw.githubusercontent.com/lamquangminh/EVKey/master/docs/EVKeyLogo_240.PNG" >
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2322932730849163"
+     crossorigin="anonymous"></script>
 </head>
