--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,3 +1,6 @@
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-2322932730849163">
+</amp-auto-ads>
 <button class="donate_block" onclick="ShowDonate();">Donate</button>
 <div id="donate_links">
   <ul>
